--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "This service expose account API's",
   "main": "app.js",
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "mongodb": "^4.11.0",
