--- a/package.json
+++ b/package.json
@@ -6,8 +6,13 @@
   "dependencies": {
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "jsonwebtoken": "^8.5.1",
+    "moment": "^2.29.4",
     "mongodb": "^4.11.0",
-    "node-fetch": "^2.6.7"
+    "node-fetch": "^2.6.7",
+    "prettier": "^2.8.1",
+    "swagger-ui-express": "^4.6.0",
+    "winston": "^3.8.2"
   },
   "devDependencies": {},
   "scripts": {
