--- a/.github/action/action.yml
+++ b/.github/action/action.yml
@@ -13,6 +13,6 @@ runs:
           with:
               node-version: '16.x'
           
-        - name: Building App
-          run: npm build
+        - name: Install dependencies
+          run: npm install
           shell: bash
