--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon app.js",
-    "debug": "node --inspect app.js"
+    "debug": "node --inspect app.js",
+    "lint": "eslint **/*.js --fix"
   },
   "keywords": [],
   "author": "Minakshee",
