--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon app.js",
     "debug": "node --inspect app.js",
-    "lint": "eslint --no-fix --max-warnings 0"
+    "lint": "eslint"
   },
   "keywords": [],
   "author": "Minakshee",
