--- a/package.json
+++ b/package.json
@@ -4,7 +4,15 @@
   "description": "This service expose account API's",
   "main": "app.js",
   "dependencies": {
+    "bcrypt": "^5.1.0",
+    "body-parser": "^1.20.1",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
+    "eslint": "^8.29.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-react": "^7.31.11",
     "express": "^4.18.2",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.4",
@@ -18,13 +26,14 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon app.js",
-    "debug": "node --inspect app.js"
+    "debug": "node --inspect app.js",
+    "lint": "eslint"
   },
   "keywords": [],
   "author": "Minakshee",
   "license": "ISC",
   "engines": {
     "node": ">=16.0.0",
-    "npm": "^6.0.0"
+    "npm": ">6.0.0"
   }
 }
