--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -24,5 +24,5 @@ jobs:
       - uses: akhileshns/heroku-deploy@v3.12.12 
         with:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
-          heroku_app_name: "test-oo"
+          heroku_app_name: "account-microservice"
           heroku_email: "truptira85@gmail.com"
